Complete `VulnerableSoftware` synchronization logic
Signed-off-by: nscuro <nscuro@protonmail.com>